# ROS2_vis

./: README.md
armor_mvp/: CMakeLists.txt  README.md  main.cpp  results.jsonl
armor_mvp/config/: app.yaml
armor_mvp/include/armor/: app.hpp  capture.hpp  detector.hpp  tracker.hpp  types.hpp  visualizer.hpp
armor_mvp/src/: app.cpp  capture.cpp  detector.cpp  tracker.cpp  visualizer.cpp
armor_vision/: CMakeLists.txt  package.xml
armor_vision/config/: camera_info.yaml
armor_vision/include/armor_vision/: armor_vision_node.hpp  types.hpp
armor_vision/launch/: bringup_detect.launch.py
armor_vision/msg/: ArmorDetection.msg  ArmorDetections.msg
armor_vision/src/: armor_vision_node.cpp  detector.cpp  param_utils.cpp  tracker.cpp
